# maya

./: .gitignore  API.md  CMakeLists.txt  README.md  mkdocs.yml
.github/workflows/: ci.yml
build-md/: test_commonmark_spec  test_markdown
cmake/: maya-config.cmake.in
docs/: 00-introduction.md  01-getting-started.md  02-dsl.md  03-styling.md  04-layout.md  05-runtime-content.md  06-events.md  07-rendering-modes.md  08-canvas-api.md  09-signals.md  10-examples.md  11-api-reference.md  12-roadmap.md  13-widgets.md  14-animation.md  15-responsive.md  glossary.md  index.md  rendering-modes.md
docs/foundations/: ansi-escape-codes.md  how-maya-works.md  keyboard-and-mouse.md  the-cell-grid.md  the-rendering-problem.md  what-is-a-terminal.md
docs/internals/: inline-autogrow.md  inline-cursor-tracking.md  inline-redraw-paths.md  render-roadmap.md  scrollback-corruption-audit.md  strata-overflow.md  strata-renderer.md  witness-chain.md
docs/javascripts/: mermaid.mjs
docs/stylesheets/: extra.css
examples/: adaptive.cpp  agent.cpp  agent_session.cpp  agent_ui.cpp  breakout.cpp  chat.cpp  components_inline.cpp  components_showcase.cpp  counter.cpp  dashboard.cpp  demo.cpp  deploy.cpp  doom_fire.cpp  dsl_demo.cpp  fireworks.cpp  fluid.cpp  fps.cpp  grid.cpp  hacker.cpp  ide.cpp  inline.cpp  inline_progress.cpp  investigate.cpp  life.cpp  mandelbrot.cpp  markup.cpp  matrix.cpp  messenger.cpp  motion_showcase.cpp  music.cpp  particles.cpp  pretty.cpp  proc_table.cpp  progress.cpp  raymarch.cpp  scroll_2d.cpp  scroll_clip.cpp  scroll_slice.cpp  scroll_styles.cpp  snake.cpp  (+12 more)
fuzz/: CMakeLists.txt  fuzz_input.cpp  fuzz_markdown.cpp  fuzz_osc52.cpp  fuzz_safe_break.cpp
include/maya/: dsl.hpp  internal.hpp  maya.hpp
include/maya/anim/: text_reveal.hpp
include/maya/app/: app.hpp  canvas_app.hpp  context.hpp  environment.hpp  error_boundary.hpp  events.hpp  inline.hpp  overlay_layer.hpp  quit.hpp  run.hpp  static_region.hpp  sub.hpp
include/maya/components/: accordion_bar.hpp  activity_bar.hpp  bar_chart.hpp  breadcrumb.hpp  button.hpp  callout.hpp  checkpoint.hpp  chip.hpp  code_block.hpp  command_card.hpp  components.hpp  context_pill.hpp  context_window.hpp  core.hpp  cost_meter.hpp  diff_stat.hpp  diff_view.hpp  disclosure.hpp  divider.hpp  edit_card.hpp  feedback_buttons.hpp  file_tree.hpp  flame_chart.hpp  form_field.hpp  gauge.hpp  git_graph.hpp  glimmer_text.hpp  heatmap.hpp  inline_diff.hpp  key_binding.hpp  list.hpp  log_view.hpp  markdown.hpp  message_bubble.hpp  model_selector.hpp  number_input.hpp  permission.hpp  progress_bar.hpp  radio_group.hpp  read_card.hpp  (+20 more)
include/maya/core/: anim_clock.hpp  animation.hpp  cmd.hpp  concepts.hpp  expected.hpp  focus.hpp  function.hpp  hit.hpp  motion.hpp  overload.hpp  render_context.hpp  scope_exit.hpp  scroll_state.hpp  signal.hpp  simd.hpp  tracked.hpp  types.hpp
include/maya/element/: box.hpp  builder.hpp  element.hpp  grid.hpp  text.hpp
include/maya/layout/: columns.hpp  yoga.hpp
include/maya/platform/: concepts.hpp  detect.hpp  io.hpp  select.hpp  thread.hpp
include/maya/render/: cache_id.hpp  canvas.hpp  canvas_witness.hpp  diff.hpp  frame.hpp  frame_bytes.hpp  inline_frame.hpp  pipeline.hpp  renderer.hpp  scrollback_ledger.hpp  serialize.hpp  strata.hpp  wire_row.hpp
include/maya/style/: border.hpp  color.hpp  gradient.hpp  style.hpp  theme.hpp
include/maya/terminal/: ansi.hpp  input.hpp  terminal.hpp  writer.hpp
include/maya/text/: stream_sink.hpp  unicode_width.hpp  unicode_width_table.hpp
include/maya/widget/: accordion.hpp  activity_bar.hpp  activity_indicator.hpp  agent_timeline.hpp  agent_tool.hpp  api_usage.hpp  app_layout.hpp  badge.hpp  bar_chart.hpp  bash_tool.hpp  breadcrumb.hpp  button.hpp  calendar.hpp  callout.hpp  canvas.hpp  changes_strip.hpp  chat.hpp  checkbox.hpp  checkpoint_divider.hpp  command_palette.hpp  composer.hpp  confirm.hpp  context_gauge.hpp  context_window.hpp  conversation.hpp  conversation_view.hpp  cost_tracker.hpp  diff_view.hpp  disclosure.hpp  divider.hpp  edit_tool.hpp  error_block.hpp  event_timeline.hpp  fetch_tool.hpp  file_changes.hpp  file_ref.hpp  gauge.hpp  (+65 more)
packaging/: .gitignore  PKGBUILD
scripts/: gen_cm_unicode.py  gen_entities.py  gen_unicode_width.py  split_headers.py
src/app/: app.cpp  events.cpp  inline.cpp
src/components/: accordion_bar.cpp  activity_bar.cpp  bar_chart.cpp  breadcrumb.cpp  button.cpp  callout.cpp  checkpoint.cpp  chip.cpp  code_block.cpp  command_card.cpp  context_pill.cpp  context_window.cpp  cost_meter.cpp  diff_stat.cpp  diff_view.cpp  disclosure.cpp  divider.cpp  edit_card.cpp  feedback_buttons.cpp  file_tree.cpp  flame_chart.cpp  form_field.cpp  gauge.cpp  git_graph.cpp  glimmer_text.cpp  heatmap.cpp  inline_diff.cpp  key_binding.cpp  log_view.cpp  markdown.cpp  message_bubble.cpp  model_selector.cpp  number_input.cpp  permission.cpp  progress_bar.cpp  read_card.cpp  search_card.cpp  search_input.cpp  sparkline.cpp  spinner.cpp  (+13 more)
src/element/: builder.cpp  text.cpp
src/layout/: yoga.cpp
src/render/: canvas.cpp  canvas_witness.cpp  diff.cpp  frame_bytes.cpp  inline_frame.cpp  renderer.cpp  scrollback_ledger.cpp  serialize.cpp  strata.cpp
src/terminal/: ansi.cpp  input.cpp  writer.cpp
src/widget/: chat.cpp  markdown.cpp
tests/: bench_thread_scaling.cpp  check.hpp  cm_html.hpp  probe_codeborder.cpp  render_test.cpp  test_animation.cpp  test_ansi.cpp  test_border.cpp  test_canvas.cpp  test_card_border.cpp  test_chat_layout.cpp  test_codefence_border.cpp  test_color.cpp  test_commonmark_spec.cpp  test_diff.cpp  test_framebuffer.cpp  test_fresh_oversized_scrollback.cpp  test_highlight.cpp  test_highlight_resume.cpp  test_html.cpp  test_inline_frame.cpp  test_input.cpp  test_layout.cpp  test_markdown.cpp  test_motion.cpp  test_overlay_layer.cpp  test_promoted.cpp  test_render.cpp  test_render_scaling.cpp  test_resize.cpp  test_scroll.cpp  test_signal.cpp  test_simd.cpp  test_static_split.cpp  test_strata.cpp  test_stream_sink.cpp  test_streaming_cache.cpp  test_streaming_perf.cpp  test_streaming_window.cpp  test_style.cpp  (+7 more)
(+61 files in other folders)
